fix(lab): width 100% on mobile

--- a/assets/styles/templates/layouts/_lab.scss
+++ b/assets/styles/templates/layouts/_lab.scss
@@ -40,6 +40,8 @@
     }
 
     &__media {
-        width: 50%;
+        @include tablet {
+            width: 50%;
+        }
     }
 }
